# hifazat

./: README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/hifazat/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: globals.dart  hifazat.dart  main.dart
lib/components/: hifazat_scaffold.dart
lib/constants/: colors.dart  general.dart
lib/pages/: contacts_page.dart  home_page.dart
lib/utils/: location.dart  recorder_utility.dart  send_message_to_trusted_contacts.dart  web_util.dart
server/: main.py  pyproject.toml  requirements.txt  scream_detection.hdf5
web/: index.html  manifest.json
