[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["ritikrajdev <ritikrajdev761@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
tensorflow = "^2.9.1"
librosa = "^0.9.2"
flask = "^2.2.2"
flask-cors = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
